Fix overflow on Firefox.

--- a/themes/mortenson/css/main.css
+++ b/themes/mortenson/css/main.css
@@ -45,6 +45,10 @@ a:focus {
   padding: 0 100px;
 }
 
+.container > * {
+    min-width: 0;
+}
+
 .container--margin {
   margin: var(--spacer-4) auto;
 }
